--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,12 @@
-/server/config.js
-/client/config.js
-/project.config.json
-/client/beifen
+.DS_Store
+node_modules/
+dist/
+npm-debug.log
+yarn-error.log
+
+# Editor directories and files
+.idea
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
